# krb5-adsync

./: Makefile.am  Makefile.in  config.h.in  configure.in  delete.c  krb5sync.c  krb5sync.h  krbad.c  ldapad.c  modify.c
