AC_PREREQ(2.59)
AC_INIT([krb5sync], [0.1], [jreams@columbia.edu])
AM_INIT_AUTOMAKE([foreign 1.9 no-define])
AC_CONFIG_SRCDIR([krb5sync.c])
AC_CONFIG_HEADER([config.h])

PKG_NAME=krb5sync
PKG_VERSION="0.1"

AC_PROG_CC
AC_PROG_INSTALL

AC_ARG_WITH([krb5-config],
        AC_HELP_STRING(
                [--with-krb5-config=PROGRAM],
                [location of the krb5-config program]),
        [krb5_config_prog=$withval])
AC_PATH_PROG(KRB5_CONFIG, krb5_config, $krb5_config_prog)

if test "x$KRB5_CONFIG" = "x"; then
	AC_MSG_ERROR([Couldn't find krb5-config. Please verify that it is installed.])
fi

KRB5_LIBS=$($KRB5_CONFIG --libs kadm-server)
LIBS="$LIBS $KRB5_LIBS"

KRB5_CFLAGS=$($KRB5_CONFIG --cflags kadm-server)

CFLAGS="-g $CFLAGS $KRB5_CFLAGS"
CPPFLAGS="$CPPFLAGS $KRB5_CFLAGS
AC_ARG_ENABLE([debuginfo], [Enables debugging info for binaries.]
	CFLAGS="-g $KRB5_CFLAGS",
	CFLAGS="$CFLAGS $KRB5_CFLAGS")

AC_CHECK_LIB([ldap], [ldap_sasl_interactive_bind_s])
AC_CHECK_LIB([ldap], [ldap_search_ext_s])
AC_CHECK_LIB([krb5], [krb5_get_init_creds_password])
AC_CHECK_LIB([krb5], [krb5_set_error_message])
AC_CHECK_LIB([gssapi_krb5], [gss_krb5_ccache_name])

AC_HEADER_STDC
AC_CHECK_HEADERS([ldap.h])
AC_CHECK_HEADERS([krb5/krb5.h krb5/kadm5_hook_plugin.h], [], [AC_MSG_ERROR([Couldn't find krb5.h and kadm5_hook_plugin.h. Check your kerberos installation])])
AC_CHECK_HEADERS([gssapi/gssapi_krb5.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
